--- a/FE-shape-real-time/src/stylesheet/call-screen.scss
+++ b/FE-shape-real-time/src/stylesheet/call-screen.scss
@@ -31,19 +31,23 @@
 		color: $blue-light;
 
 		&:hover {
-			background-color: rgba($main-color, 0.2);
+			background-color: rgba($white, 0.2);
 		}
+	}
+	.btn-paint {
+		color: $yellow;
+		border: solid 2px $yellow;
 	}
 
 	.txt-clientId {
 		height: 40px;
 		margin: 40px auto 0px 10px;
-		color: $main-color;
+		color: $white;
 		font-size: 0.9em;
 		background-color: transparent;
 		border: none;
-		border-bottom: solid 1px $main-color;
-		@include input-placeholder(rgba($main-color, 0.8));
+		border-bottom: solid 1px $white;
+		@include input-placeholder(rgba($white, 0.8));
 	}
 	.meeting-page {
 		text-align: center;
@@ -66,7 +70,6 @@
 		font-family: "Nunito", sans-serif;
 		color: #2b394e;
 		input{
-			border: 1px solid $blue-light;
 			border-radius: 7px;
 			text-align: center;
 		}
