--- a/FE-shape-real-time/src/stylesheet/app.scss
+++ b/FE-shape-real-time/src/stylesheet/app.scss
@@ -9,13 +9,14 @@ $icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";
 
 body {
   background: $bg-main;
-  font-family: 'Kameron', serif;
+  font-family: "Kameron", serif;
 }
 
 .btn-action {
   outline: none;
   border: none;
 }
+
 
 @import "call-screen";
 @import "call-actions";
