--- a/FE-shape-real-time/src/stylesheet/shape.scss
+++ b/FE-shape-real-time/src/stylesheet/shape.scss
@@ -26,7 +26,9 @@
       }
     }
     .menu {
+      width: 10rem !important;
       .item {
+        font-size: 18px;
         img {
           width: 18px !important;
           float: right;
