--- a/FE-shape-real-time/src/stylesheet/call-screen.scss
+++ b/FE-shape-real-time/src/stylesheet/call-screen.scss
@@ -16,27 +16,6 @@
 		}
 	}
 
-	.btn-action {
-		$height: 60px;
-		height: $height;
-		width: $height;
-		margin: 20px 30px 0px 0px;
-		line-height: $height;
-		text-align: center;
-		border-radius: 50%;
-		border: solid 2px $blue-light;
-		cursor: pointer;
-		transition-duration: 0.25s;
-		background-color: transparent;
-		color: $blue-light;
-		padding: 0 !important;
-		&:hover {
-			background-color: rgba($white, 0.2);
-		}
-		i{
-			margin: auto;
-		}
-	}
 	.btn-paint {
 		color: $yellow;
 		border: solid 2px $yellow;
@@ -63,7 +42,7 @@
 			justify-content: center;
 			.icon-copy {
 				cursor: pointer;
-				.check{
+				.check {
 					color: green;
 				}
 			}
@@ -81,6 +60,27 @@
 			overflow: hidden;
 			text-overflow: ellipsis;
 			margin-right: 20px;
+		}
+		.action-screen {
+			.btn-action {
+				$height: 60px;
+				height: $height;
+				width: $height;
+				margin: 20px 30px 0px 0px;
+				line-height: $height;
+				text-align: center;
+				border-radius: 50%;
+				border: solid 2px $blue-light;
+				cursor: pointer !important;
+				transition-duration: 0.25s;
+				background-color: transparent;
+				color: $blue-light;
+				padding: 0 !important;
+				i {
+					margin: auto;
+					font-size: 20px;
+				}
+			}
 		}
 	}
 	.text-id {
