fix show video, css menu

--- a/FE-shape-real-time/src/stylesheet/shape.scss
+++ b/FE-shape-real-time/src/stylesheet/shape.scss
@@ -7,8 +7,10 @@
   }
   .wide:first-child {
     background: #fff !important;
+    min-width: 16rem !important;
   }
   .shape-slider-menu {
+    width: 15rem;
     .shape-logo {
       margin: 30px;
     }
